Fix bug sine function name

--- a/calculator.html
+++ b/calculator.html
@@ -41,7 +41,7 @@ Number:
 
 <button onclick="cube()"> x^3 </button>
 <button onclick="pow4()"> x^4 </button>
-<button onclick="cube()"> sine </button>
+<button onclick="sine()"> sine </button>
 
 </body>
 
